--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -1,9 +1,16 @@
 // 背景图片
-bg-image($url)
-  background-image: url('scater.jpg')
-  @media (-webkit-min-device-pixel-ratio: 3),(min-device-pixel-ratio: 3)
-    background-image: url('scater.jpg')
-  border-radius:8px  
+// bg-image($url)
+//   background-image: url($url + "@2x.png")
+//   @media (-webkit-min-device-pixel-ratio: 3),(min-device-pixel-ratio: 3)
+//     background-image: url($url + "@3x.png")
+
+bg-image($url) {
+  background-image: url($url + '@2x.png');
+
+  @media (-webkit-min-device-pixel-ratio: 3), (min-device-pixel-ratio: 3) {
+    background-image: url($url + '@3x.png');
+  }
+}
 
 // 不换行
 no-wrap()
